; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/gem/extr_i915_gem_execbuffer.c_check_buffer_count.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/gem/extr_i915_gem_execbuffer.c_check_buffer_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INT_MAX = common dso_local global i64 0, align 8
@SIZE_MAX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @check_buffer_count to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_buffer_count(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %4 = call i64 (...) @eb_element_size()
  store i64 %4, i64* %3, align 8
  %5 = load i64, i64* %2, align 8
  %6 = icmp ult i64 %5, 1
  br i1 %6, label %18, label %7

7:                                                ; preds = %1
  %8 = load i64, i64* %2, align 8
  %9 = load i64, i64* @INT_MAX, align 8
  %10 = icmp ugt i64 %8, %9
  br i1 %10, label %18, label %11

11:                                               ; preds = %7
  %12 = load i64, i64* %2, align 8
  %13 = load i64, i64* @SIZE_MAX, align 8
  %14 = load i64, i64* %3, align 8
  %15 = udiv i64 %13, %14
  %16 = sub i64 %15, 1
  %17 = icmp ugt i64 %12, %16
  br label %18

18:                                               ; preds = %11, %7, %1
  %19 = phi i1 [ true, %7 ], [ true, %1 ], [ %17, %11 ]
  %20 = xor i1 %19, true
  %21 = zext i1 %20 to i32
  ret i32 %21
}

declare dso_local i64 @eb_element_size(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
